ecmascript/parser/tests/test262-error-references/fail/45b295d6c9abe25d.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/45b295d6c9abe25d.js:1:6
  |
1 | ({ * })
  |      ^

